--- a/.github/workflows/on-push-http.yaml
+++ b/.github/workflows/on-push-http.yaml
@@ -30,31 +30,13 @@ jobs:
         run: npm install
       - uses: alonch/actions-aws-backend-setup@main
         with: 
-          instance: vanjs-http
+          instance: redirect-qr
       - uses: alonch/actions-aws-function-node@main
         id: backend
         with: 
-          name: vanjs-http
+          name: backend
           artifacts: backend
           entrypoint-file: src/app.js
           entrypoint-function: handler
           allow-public-access: true
           memory: 1536
-      
-      - name: Install Node.js for frontend
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: frontend
-
-      - working-directory: frontend  
-        run: npm install
-      - working-directory: frontend
-        run: REACT_APP_API_URL=${{ steps.backend.outputs.url }} npm run build
-      
-      - uses: alonch/actions-aws-website@main
-        id: frontend
-        with: 
-          name: main
-          content-path: frontend/build
