--- a/.github/workflows/on-push-http.yaml
+++ b/.github/workflows/on-push-http.yaml
@@ -8,6 +8,8 @@ jobs:
     
     permissions: 
       id-token: write
+      contents: read
+      
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
